<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.joshbgold.ribbit.SignUpActivity"
                style="@style/AuthBackground">

    <EditText
        android:id="@+id/userNameField"
        android:hint="@string/username_hint"
        style="@style/AuthEditText">
        <requestFocus />
        </EditText>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:layout_below="@+id/userNameField"
        style="@style/AuthEditText"/>

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"
        android:layout_below="@+id/passwordField"
        style="@style/AuthEditText"/>

    <Button
        android:text="@string/sign_up_button_label"
        android:id="@+id/signupButton"
        android:layout_below="@+id/emailField"
        style="@style/AuthButton"/>
</RelativeLayout>
