<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.joshbgold.ribbit.LoginActivity"
                android:id="@+id/LoginLayout"
                android:background="@drawable/background_fill">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/background"
        android:scaleType="fitStart"
        android:contentDescription="@string/content_description_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameField"
        android:hint="@string/username_hint"
        android:textSize="32dp"
        android:layout_below="@+id/subtitle"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:textSize="32dp"
        android:inputType="textPassword"
        android:layout_below="@+id/userNameField"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login_button_label"
        android:textAllCaps="false"
        android:textSize="32dp"
        android:layout_below="@+id/passwordField"
        android:layout_alignLeft="@+id/backgroundImage"
        android:layout_alignStart="@+id/backgroundImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signupText"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:id="@+id/forgotPasswordText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/loginButton"
        android:layout_alignEnd="@+id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

</RelativeLayout>
